[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quansyn"
version = "0.1.2"
description = "A package for quantitative syntax analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Mu Yang", email = "yangmufy@163.com" }
]
dependencies = [
  "numpy>=1.21.5",
  "pandas>=1.4.4",
  "conllu>=4.5.3",
  "scikit_learn>=1.0.2",
  "scipy>=1.9.1"
]

[project.urls]
Homepage = "https://github.com/YuhuYang/QuanSyn"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
